<resources>
    <string name="app_name">BidIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_name">Name Surname</string>
    <string name="nav_my_account">My Account</string>
    <string name="nav_balance">Ballance</string>
    <string name="nav_history">History</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_my_items">My Items</string>
    <string name="nav_log_out">Log out</string>
    <string name="nav_create_account">Create Account</string>
    <string name="nav_help">Hlep</string>
    <string name="auth_failed">Failed</string>
    <string name="signed_out">Signed out</string>
</resources>
