<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group_if_created"
        android:visible="true">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_my_account" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/nav_balance" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/nav_favorites" />
        <item
            android:id="@+id/nav_my_items"
            android:icon="@drawable/ic_collections_black_24dp"
            android:title="@string/nav_my_items" />

        <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_remove_circle_outline_black_24dp"
            android:title="@string/nav_log_out" />

    </group>

    <group
        android:id="@+id/menu_group_seen_always">
        <item
            android:id="@+id/nav_create_account"
            android:icon="@drawable/ic_add_circle_black_24dp"
            android:title="@string/nav_create_account" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/nav_help" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_more_black_24dp"
            android:title="About Us" />

    </group>


</menu>
